# CS_MiniSQLiteServer

./: .gitignore  CBinaryFileReader.cpp  CBinaryFileReader.h  CBusinessLogic.cpp  CBusinessLogic.h  CClientSession.cpp  CClientSession.h  CConfig.cpp  CConfig.h  CDatabase.cpp  CDatabase.h  CMakeLists.txt  CRunAsync.cpp  CRunAsync.h  CSQLiteDB.cpp  CSQLiteDB.h  CS_MiniSQLiteServer.sln  CS_MiniSQLiteServer.vcxproj  CS_MiniSQLiteServer.vcxproj.filters  CServer.cpp  CServer.h  README  Service.cpp  Service.h  main.cpp  main.h
docs/: Documentation_v1.0.docx
include/INIReaderWriter/: INIWriter.hpp
include/linuxPort/glog/: config.h
libs/: libglog.la
libs/boost/win32Port/: libboost_chrono-vc141-mt-gd-x32-1_67.lib  libboost_chrono-vc141-mt-gd-x64-1_67.lib  libboost_chrono-vc141-mt-x32-1_67.lib  libboost_chrono-vc141-mt-x64-1_67.lib  libboost_date_time-vc141-mt-gd-x32-1_67.lib  libboost_date_time-vc141-mt-gd-x64-1_67.lib  libboost_date_time-vc141-mt-x32-1_67.lib  libboost_date_time-vc141-mt-x64-1_67.lib  libboost_system-vc141-mt-gd-x32-1_67.lib  libboost_system-vc141-mt-gd-x64-1_67.lib  libboost_system-vc141-mt-x32-1_67.lib  libboost_system-vc141-mt-x64-1_67.lib  libboost_thread-vc141-mt-gd-x32-1_67.lib  libboost_thread-vc141-mt-x32-1_67.lib  libboost_thread-vc141-mt-x64-1_67.lib
libs/glog/win32Port/: libglog_x32_Debug.lib  libglog_x64_Debug.lib
working_exe/: CS_MiniSQLiteServer.ini  Start.bat  Stop.bat
